--- a/libs/config.json
+++ b/libs/config.json
@@ -1,4 +1,5 @@
 {
-    "port" : 1337,
-    "mongodb": "localhost/cda"
+    "port" : 3000,
+    "mongodb": "localhost/cda",
+    "collections": ["patients","records"]
 }
